<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="@drawable/fondo1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nombre_hint"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextNombre_edit"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:background="@drawable/borde_redondo"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/nombre_hint"
        android:inputType="text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/apellido_hint"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextApellido_edit"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/apellido_hint"
        android:textSize="16sp"
        android:background="@drawable/borde_redondo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/user_hint"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextUserName_edit"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user_hint"
        android:textSize="16sp"
        android:background="@drawable/borde_redondo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/pass_hint"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextPassword_edit"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/pass_hint"
        android:textSize="16sp"
        android:background="@drawable/borde_redondo"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/email_hint"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextEmail_edit"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textSize="16sp"
        android:background="@drawable/borde_redondo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cel_hint"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextCel_edit"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/cel_hint"
        android:textSize="16sp"
        android:background="@drawable/borde_redondo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/select_gen"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinnerGenero_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:minWidth="279dp"
        android:minHeight="30dp"/>

    <LinearLayout
        android:id="@+id/botones_acciones_persona_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_guardar_persona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btn_cancelar_edit_persona"
            android:layout_width="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancelar" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>