<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formulario_crear_mascotas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".CrearMascotaActivity">

    <TextView
        android:id="@+id/textViewCrearMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="23dp"
        android:text="@string/formulario_mascota"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextNombreMascota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNombreMascota"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/borde_redondo"
        android:ems="10"
        android:hint="@string/nombre_mascota_hint"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEdadMascota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCrearMascota" />

    <EditText
        android:id="@+id/editTextEdadMascota"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/edad_mascota_hint"
        android:textSize="16sp"
        android:background="@drawable/borde_redondo"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreMascota" />

    <Spinner
        android:id="@+id/spinnerColorMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="23dp"
        android:background="@color/white"
        android:minWidth="279dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSexoMascota" />

    <RadioGroup
        android:id="@+id/rgSexoMascota"
        android:layout_width="177dp"
        android:layout_height="41dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="23dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/spinnerColorMascota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/rbMacho"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Macho"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="0dp" />

        <RadioButton
            android:id="@+id/rbHembra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hembra" />


    </RadioGroup>

    <Button
        android:id="@+id/button8"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="22dp"
        android:text="@string/text_add_mascota"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerColorMascota" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sexo_mascota_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rgSexoMascota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEdadMascota" />

    <Button
        android:id="@+id/button9"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="59dp"
        android:background="@android:color/transparent"
        android:text="@string/volver_text"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</androidx.constraintlayout.widget.ConstraintLayout>